--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depay-react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/cjs/index.js",
   "files": [
@@ -33,7 +33,10 @@
   },
   "homepage": "https://github.com/DePayFi/depay-react-token-image#readme",
   "private": false,
-  "dependencies": {},
+  "dependencies": {
+    "depay-web3-blockchains": "^2.1.0",
+    "depay-web3-constants": "^2.1.0"
+  },
   "peerDependencies": {
     "react": "^17",
     "react-dom": "^17"
