--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "depay-react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/cjs/index.js",
   "files": [
@@ -16,7 +16,7 @@
     "test:jest": "npx jest --no-cache",
     "test:cypress": "yarn cypress run",
     "test:cypress:debug": "yarn cypress run --headed --no-exit",
-    "test": "yarn test:jest && yarn test:cypress"
+    "test": "yarn test:cypress"
   },
   "repository": "git@github.com:DePayFi/depay-react-token-image.git",
   "keywords": [
@@ -34,10 +34,10 @@
   "homepage": "https://github.com/DePayFi/depay-react-token-image#readme",
   "private": false,
   "dependencies": {
-    "depay-web3-blockchains": "^2.1.1",
-    "depay-web3-constants": "^2.1.0"
   },
   "peerDependencies": {
+    "depay-web3-blockchains": "^2.4.0",
+    "depay-web3-constants": "^3.0.0",
     "react": "^17",
     "react-dom": "^17"
   },
@@ -56,6 +56,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cypress": "^8.2.0",
+    "depay-web3-blockchains": "^2.4.0",
+    "depay-web3-constants": "^3.0.0",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
