--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "depay-react-token-image",
+  "name": "@depay/react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "1.1.3",
+  "version": "2.0.0",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/cjs/index.js",
   "files": [
@@ -18,7 +18,7 @@
     "test:cypress:debug": "yarn cypress run --headed --no-exit",
     "test": "yarn test:cypress"
   },
-  "repository": "git@github.com:DePayFi/depay-react-token-image.git",
+  "repository": "git@github.com:DePayFi/react-token-image.git",
   "keywords": [
     "react",
     "token",
@@ -29,15 +29,15 @@
   "author": "depay.fi",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DePayFi/depay-react-token-image/issues"
+    "url": "https://github.com/DePayFi/react-token-image/issues"
   },
-  "homepage": "https://github.com/DePayFi/depay-react-token-image#readme",
+  "homepage": "https://github.com/DePayFi/react-token-image#readme",
   "private": false,
   "dependencies": {
   },
   "peerDependencies": {
-    "depay-web3-blockchains": "^2.4.0",
-    "depay-web3-constants": "^3.0.0",
+    "@depay/web3-blockchains": "^3.0.0",
+    "@depay/web3-constants": "^4.0.0",
     "react": "^17",
     "react-dom": "^17"
   },
@@ -48,6 +48,8 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "@depay/web3-blockchains": "^3.0.0",
+    "@depay/web3-constants": "^4.0.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
@@ -56,16 +58,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "cypress": "^8.2.0",
-    "depay-web3-blockchains": "^2.4.0",
-    "depay-web3-constants": "^3.0.0",
     "eslint": "^7.15.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.1",
+    "react": "^17",
+    "react-dom": "^17",
+    "react-test-renderer": "^17",
     "react-testing-library": "^8.0.1",
     "rollup": "^2.34.2",
     "rollup-plugin-livereload": "^2.0.0",
