--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@depay/react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "2.1.0",
+  "version": "3.0.0",
   "description": "React component to display token images with fallbacks and unknown state.",
-  "main": "./dist/cjs/index.js",
+  "main": "./dist/umd/index.js",
+  "module": "./dist/esm/index.js",
   "files": [
     "dist"
   ],
@@ -36,8 +37,8 @@
   "dependencies": {
   },
   "peerDependencies": {
-    "@depay/web3-blockchains": "^3.0.0",
-    "@depay/web3-constants": "^4.0.0",
+    "@depay/web3-blockchains": "^4.0.0",
+    "@depay/web3-constants": "^5.0.0",
     "react": "^17",
     "react-dom": "^17"
   },
@@ -48,8 +49,8 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "@depay/web3-blockchains": "^3.0.0",
-    "@depay/web3-constants": "^4.0.0",
+    "@depay/web3-blockchains": "^4.0.0",
+    "@depay/web3-constants": "^5.0.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
