--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "crypto",
     "cryptocurrencies"
   ],
-  "author": "depay.fi",
+  "author": "depay.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/DePayFi/react-token-image/issues"
