--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "4.4.2",
+  "version": "4.5.0",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
@@ -33,10 +33,12 @@
   },
   "homepage": "https://depay.com",
   "private": false,
-  "dependencies": {},
   "peerDependencies": {
-    "@depay/web3-blockchains": "^6.2.3",
+    "@depay/solana-web3.js": "^1.19.0",
+    "@depay/web3-blockchains": "^6.3.2",
+    "@depay/web3-client": "^10.3.1",
     "@depay/web3-constants": "^6.3.2",
+    "ethers": "^5.7.1",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -47,7 +49,9 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "@depay/web3-blockchains": "^6.2.3",
+    "@depay/solana-web3.js": "^1.19.0",
+    "@depay/web3-blockchains": "^6.3.2",
+    "@depay/web3-client": "^10.3.1",
     "@depay/web3-constants": "^6.3.2",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
@@ -62,6 +66,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "ethers": "^5.7.1",
     "react": "^18",
     "react-dom": "^18",
     "react-test-renderer": "^18",
