--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "4.5.0",
+  "version": "4.5.1",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
@@ -9,7 +9,8 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c rollup.module.config.js",
+    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js",
+    "build:evm": "rollup -c rollup.module.evm.config.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "dev": "rollup -c rollup.dev.config.js -w",
