--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "4.9.0",
+  "version": "4.10.0",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
@@ -37,7 +37,8 @@
   "peerDependencies": {
     "@depay/solana-web3.js": "^1.21.2",
     "@depay/web3-blockchains": "^8.0.1",
-    "@depay/web3-client": "^10.12.0",
+    "@depay/web3-client": "^10.12.1",
+    "@depay/web3-tokens": "^9.19.4",
     "ethers": "^5.7.1",
     "react": "^18",
     "react-dom": "^18"
@@ -51,7 +52,8 @@
     "@babel/preset-react": "^7.12.7",
     "@depay/solana-web3.js": "^1.21.2",
     "@depay/web3-blockchains": "^8.0.1",
-    "@depay/web3-client": "^10.12.0",
+    "@depay/web3-client": "^10.12.1",
+    "@depay/web3-tokens": "^9.19.4",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
