--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "4.15.2",
+  "version": "4.15.3",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
@@ -36,8 +36,8 @@
   "private": false,
   "peerDependencies": {
     "@depay/solana-web3.js": "^1.25.1",
-    "@depay/web3-blockchains": "^9.1.4",
-    "@depay/web3-client": "^10.18.0",
+    "@depay/web3-blockchains": "^8.3.0",
+    "@depay/web3-client": "10.17.0",
     "@depay/web3-tokens": "^9.20.1",
     "ethers": "^5.7.1",
     "react": "^18",
@@ -51,8 +51,8 @@
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
     "@depay/solana-web3.js": "^1.25.1",
-    "@depay/web3-blockchains": "^9.1.4",
-    "@depay/web3-client": "^10.18.0",
+    "@depay/web3-blockchains": "^8.3.0",
+    "@depay/web3-client": "10.16.3",
     "@depay/web3-tokens": "^9.20.1",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
