--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@depay/react-token-image",
   "moduleName": "ReactTokenImage",
-  "version": "5.1.0",
+  "version": "6.0.0",
   "description": "React component to display token images with fallbacks and unknown state.",
   "main": "./dist/umd/index.js",
   "module": "./dist/esm/index.js",
@@ -9,7 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js && rollup -c rollup.module.solana.config.js",
+    "build": "rm -rf dist && rollup -c rollup.module.config.js && rollup -c rollup.module.evm.config.js && rollup -c rollup.module.svm.config.js",
     "build:evm": "rollup -c rollup.module.evm.config.js",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx,ts,tsx}\" --fix",
@@ -35,10 +35,10 @@
   "homepage": "https://depay.com",
   "private": false,
   "peerDependencies": {
-    "@depay/solana-web3.js": "^1.26.0",
-    "@depay/web3-blockchains": "^9.6.0",
-    "@depay/web3-client": "^10.19.0",
-    "@depay/web3-tokens": "^10.4.0",
+    "@depay/solana-web3.js": "^1.98.0",
+    "@depay/web3-blockchains": "^9.7.9",
+    "@depay/web3-client": "^11.0.1",
+    "@depay/web3-tokens": "^11.0.0",
     "ethers": "^5.7.1",
     "react": "^18",
     "react-dom": "^18"
@@ -50,10 +50,10 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
-    "@depay/solana-web3.js": "^1.26.0",
-    "@depay/web3-blockchains": "^9.6.0",
-    "@depay/web3-client": "^10.19.0",
-    "@depay/web3-tokens": "^10.4.0",
+    "@depay/solana-web3.js": "^1.98.0",
+    "@depay/web3-blockchains": "^9.7.9",
+    "@depay/web3-client": "^11.0.1",
+    "@depay/web3-tokens": "^11.0.0",
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^2.4.2",
